# protect-assets

./: .gitignore  .gitmodules  BLOGPOST.md  Cargo.toml  README.md
actix/: Cargo.toml
actix/src/: main.rs
ntex/: Cargo.toml
ntex/src/: main.rs
ntex/templates/: logged-in.html
pg-ntex-session/: Cargo.toml
public/assets/css/: login.css
public/assets/js/: login.js
public/protected/: antek-asing.css  antek-asing.js
templates/: 404.html  login.html
