[package]
name = "protect-assets-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
cookie = "0.18"
lazy_static = "1.5"
minijinja = { version = "2.9", features = [
    "multi_template",
    "builtins",
    "json",
    "urlencode",
    "loader",
] }
minijinja-autoreload = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2024. Protect actix Assets by ir1keren@gmail.com"
OriginalFilename = "protect-assets-actix.exe"