[package]
name = "protect-assets-ntex"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
cookie = "0.18"
db = { version = "*", path = "../db" }
lazy_static = "1.5"
minijinja = { version = "2.9", features = [
    "multi_template",
    "builtins",
    "json",
    "urlencode",
    "loader",
] }
minijinja-autoreload = "2.9.0"
ntex = { version = "2.12", features = ["tokio", "rustls"] }
ntex-remove-trailing-slash = { version = "*", path = "../ntex-remove-trailing-slash" }
pg-ntex-session = { version = "*", path = "../pg-ntex-session" }
serde = "1.0"
tokio = { version = "1.44.2", features = [
    "rt",
    "time",
    "sync",
    "rt-multi-thread",
] }
serde_qs = "0.15.0"
dashmap = "6.1.0"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2024. Protect ntex Assets by ir1keren@gmail.com"
OriginalFilename = "protect-assets-ntex.exe"