[package]
name = "protect-assets-ntex"
version = "0.1.0"
edition = "2024"

[dependencies]
cookie = "0.18"
lazy_static = "1.5"
minijinja = { version = "2.9", features = [
    "multi_template",
    "builtins",
    "json",
    "urlencode",
    "loader",
] }
minijinja-autoreload = "2.9.0"
ntex = { version = "2.12", features = ["tokio", "rustls"] }
ntex-remove-trailing-slash = { version = "*", path = "../ntex-remove-trailing-slash" }
ntex-files = "2.0"
serde = "1.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2024. Protect ntex Assets by ir1keren@gmail.com"
OriginalFilename = "protect-assets-ntex.exe"